[package]
name = "fc-db"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier database backend"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/frontier/"

[dependencies]
kvdb-rocksdb = "0.14.0"
parking_lot = "0.11.2"

codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
sp-core = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate" }
sp-database = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate" }
sp-runtime = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate" }

fp-storage = { version = "2.0.0-dev", path = "../../primitives/storage"}
