[package]
name = "fc-db"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Frontier database backend"
repository = "https://github.com/paritytech/frontier/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4.17"
parking_lot = "0.12.1"
smallvec = "1.10"

# Parity
codec = { package = "parity-scale-codec", version = "3.2.1", features = ["derive"] }
kvdb-rocksdb = { version = "0.16.0", optional = true }
parity-db = { version = "0.4.2", optional = true }

# Substrate
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", features = ["rocksdb"] }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-database = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }

# Frontier
fp-storage = { version = "2.0.0-dev", path = "../../primitives/storage" }

[features]
default = ["kvdb-rocksdb", "parity-db"]

[dev-dependencies]
futures = "0.3.25"
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", features = ["rocksdb"] }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
substrate-test-runtime-client = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
tempfile = "3.3.0"
