[package]
name = "fc-rpc"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
ethereum = { version = "0.12.0", features = ["with-codec"] }
ethereum-types = "0.13.1"
evm = "0.35.0"
futures = { version = "0.3.1", features = ["compat"] }
hex = "0.4"
jsonrpc-core = "18.0"
jsonrpc-core-client = "18.0"
jsonrpc-pubsub = "18.0"
libsecp256k1 = "0.7"
log = "0.4.8"
lru = "0.6.6"
prometheus = { version = "0.13.0", default-features = false }
rand = "0.8"
rlp = "0.5"
tokio = { version = "1.14", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10"

prometheus-endpoint = { package = "substrate-prometheus-endpoint", branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sc-client-api = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sc-network = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sc-rpc = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sc-service = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sc-transaction-pool = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sc-transaction-pool-api = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sp-api = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sp-block-builder = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sp-blockchain = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sp-core = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sp-io = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sp-runtime = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sp-storage = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }

fc-db = { version = "2.0.0-dev", path = "../db" }
fc-rpc-core = { version = "1.1.0-dev", path = "../rpc-core" }
fp-rpc = { version = "3.0.0-dev", path = "../../primitives/rpc" }
fp-storage = { version = "2.0.0-dev", path = "../../primitives/storage"}

[dev-dependencies]
beefy-primitives = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
frontier-template-runtime = { path = "../../template/runtime", default-features = false, features = ["std", "aura"] }
sc-block-builder = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sc-client-db = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sp-consensus = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
substrate-test-runtime-client = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
tempfile = "3.3.0"

[features]
default = ["rpc_binary_search_estimate"]
rpc_binary_search_estimate = []
