[package]
name = "pallet-evm"
version = "6.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/frontier/"
description = "FRAME EVM contracts pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
evm = { version = "0.35.0", default-features = false, features = ["with-codec"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
log = { version = "0.4", default-features = false }
primitive-types = { version = "0.11.1", default-features = false, features = ["rlp", "byteorder"] }
rlp = { version = "0.5", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sha3 = { version = "0.10.1", default-features = false }

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
sp-core = { branch = "polkadot-v0.9.19", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { branch = "polkadot-v0.9.19", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-std = { branch = "polkadot-v0.9.19", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-io = { branch = "polkadot-v0.9.19", default-features = false, git = "https://github.com/paritytech/substrate" }

frame-benchmarking = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate", default-features = false, optional = true }
frame-support = { branch = "polkadot-v0.9.19", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { branch = "polkadot-v0.9.19", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-timestamp = { branch = "polkadot-v0.9.19", default-features = false, git = "https://github.com/paritytech/substrate" }

fp-evm = { version = "3.0.0-dev", default-features = false, path = "../../primitives/evm" }

libsecp256k1 = { version = "0.7", default-features = false, features = ["hmac", "static-context"], optional = true }

[dev-dependencies]
pallet-balances = { branch = "polkadot-v0.9.19", default-features = false, git = "https://github.com/paritytech/substrate" }

[features]
default = ["std"]
std = [
	"evm/std",
	"evm/with-serde",
	"hex/std",
	"log/std",
	"primitive-types/std",
	"rlp/std",
	"serde",
	"sha3/std",

	"codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-benchmarking/std",
	"frame-support/std",
 	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-timestamp/std",

	"fp-evm/std",

	"libsecp256k1",
	"libsecp256k1/std",
]
runtime-benchmarks = [
	"libsecp256k1",
	"frame-benchmarking",
]
