[package]
name = "fp-evm"
version = "3.0.0-dev"
license = "Apache-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/frontier/"
description = "Primitive EVM abstractions for Substrate."
documentation = "https://docs.rs/sp-evm"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { branch = "polkadot-v0.9.18", git = "https://github.com/paritytech/substrate", default-features = false }
sp-std = { branch = "polkadot-v0.9.18", git = "https://github.com/paritytech/substrate", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
evm = { branch = "sp-release-34", git = "https://github.com/baidang201/evm", default-features = false, features = ["with-codec"] }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-std/std",
	"serde",
	"codec/std",
	"evm/std",
	"evm/with-serde",
]
