[package]
name = "frontier-template-node"
version = "0.0.0"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2021"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.io"
repository = "https://github.com/substrate-developer-hub/frontier-node-template/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1"
clap = { version = "3.1", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.1", features = ["derive"] }
futures = "0.3"
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"
log = "0.4.8"
hex-literal = "0.3.1"

sc-basic-authorship = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sc-cli = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate", features = ["wasmtime"] }
sc-client-api = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sc-consensus = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sc-consensus-aura = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate", optional = true }
sc-consensus-manual-seal = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate", optional = true }
sc-executor = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate", features = ["wasmtime"] }
sc-finality-grandpa = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sc-keystore = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sc-network = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sc-rpc = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sc-rpc-api = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sc-service = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate", features = ["wasmtime"] }
sc-telemetry = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sc-transaction-pool = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sc-transaction-pool-api = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }

sp-api = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sp-block-builder = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sp-blockchain = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sp-consensus = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sp-consensus-aura = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sp-core = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sp-finality-grandpa = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sp-inherents = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sp-keyring = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sp-runtime = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
sp-timestamp = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
# These dependencies are used for RPC
pallet-transaction-payment-rpc = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
substrate-frame-rpc-system = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
# These dependencies are used for runtime benchmarking
frame-benchmarking = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
frame-benchmarking-cli = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
frame-system = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }

fc-consensus = { path = "../../client/consensus" }
fc-db = { path = "../../client/db" }
fc-mapping-sync = { path = "../../client/mapping-sync" }
fc-rpc = { path = "../../client/rpc" }
fc-rpc-core = { path = "../../client/rpc-core" }

fp-consensus = { path = "../../primitives/consensus" }
fp-dynamic-fee = { path = "../../primitives/dynamic-fee" }
fp-evm = { path = "../../primitives/evm" }
fp-rpc = { path = "../../primitives/rpc" }
fp-storage = { path = "../../primitives/storage" }

frontier-template-runtime = { path = "../runtime", default-features = false, features = ["std"] }

[build-dependencies]
substrate-build-script-utils = { branch = "polkadot-v0.9.19", git = "https://github.com/paritytech/substrate" }

[features]
default = ["aura"]
aura = [
	"sc-consensus-aura",
	"frontier-template-runtime/aura",
]
manual-seal = [
	"sc-consensus-manual-seal",
	"frontier-template-runtime/manual-seal",
]
rpc_binary_search_estimate = ["fc-rpc/rpc_binary_search_estimate"]
runtime-benchmarks = [
	"frontier-template-runtime/runtime-benchmarks",
]
